--- a/src/index.scss
+++ b/src/index.scss
@@ -9,155 +9,185 @@
     src: url('/fonts/denver-serial-black-regular.ttf');
 }
 
-.nav_say-hello-container {
-    position: relative;
-    display: inline-block;
-    padding: 10px;
-    cursor: pointer;
+.app {
+    .header {
+        .header_say-hello-container {
+            position: relative;
+            display: inline-block;
+            padding: 10px;
+            cursor: pointer;
 
-    .nav_say-hello-text {
-        position: relative;
-        z-index: 10;
-    }
+            .header_say-hello-text {
+                position: relative;
+                z-index: 10;
+            }
 
-    .nav_say-hello-circle {
-        content: '';
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        width: 50px;
-        height: 50px;
-        background-color: transparent;
-        border: 1px solid ;
-        border-radius: 50%;
-        transform: translate(0, -50%);
-        z-index: 0;
-    }
-}
+            .header_say-hello-circle {
+                content: '';
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                width: 50px;
+                height: 50px;
+                background-color: transparent;
+                border: 1px solid ;
+                border-radius: 50%;
+                transform: translate(0, -50%);
+                z-index: 0;
+            }
+        }
 
-.spotlightText_spotlight-div {
-    position: relative;
-    min-height: 100vh;
-    background: #09090A;
-
-    .spotlightText_spotlight-text {
-        color: #F4F4F5;
-        cursor: default;
-        font-size: 300px;
-
-        .spotlightText_spotlight {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            pointer-events: none;
-            background: radial-gradient(circle, transparent 10%, #09090A 20%);
-            background-position: -50px -50px;
+        &.scrolled {
+            background: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0) 100%);
+            transition: opacity 0.3s ease;
         }
     }
-}
 
-.scrollNav_nav-item-link {
-    position: relative;
-    padding-left: 0;
-    display: block;
-    transition: padding-left 0.2s ease-out;
-    overflow: hidden;
-    color: #52525B;
+    .spotlightText_spotlight-div {
+        background: #09090A;
 
-    &::before {
-        content: '';
-        position: absolute;
-        left: 0;
-        top: 75%;
-        transform: translateY(-50%) translateX(-100%);
-        height: 1px;
-        width: 80px;
-        background-color: #F4F4F5;
-        transition: transform 0.2s ease-out;
+        .spotlightText_spotlight-text {
+            color: #F4F4F5;
+            cursor: default;
+            font-size: 300px;
+            opacity: 60%;
+
+            .spotlightText_spotlight {
+                position: absolute;
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 300px;
+                pointer-events: none;
+                background: radial-gradient(circle, transparent 5%, #09090A 22%);
+                background-position: -50px -50px;
+                opacity: 95%;
+            }
+        }
     }
 
-    &.active {
-        padding-left: 85px;
-        color: #F4F4F5;
+    .scrollNav_nav-item-link {
+        position: relative;
+        padding-left: 0;
+        display: block;
+        transition: padding-left 0.2s ease-out;
+        overflow: hidden;
+        color: #52525B;
 
         &::before {
-            transform: translateY(-50%) translateX(0);
+            content: '';
+            position: absolute;
+            left: 0;
+            top: 75%;
+            transform: translateY(-50%) translateX(-100%);
+            height: 1px;
+            width: 80px;
+            background-color: #F4F4F5;
+            transition: transform 0.2s ease-out;
+        }
+
+        &.active {
+            padding-left: 85px;
+            color: #F4F4F5;
+
+            &::before {
+                transform: translateY(-50%) translateX(0);
+            }
+        }
+    }
+
+    .story_img {
+        position: relative;
+
+        img {
+            position: relative;
+            z-index: 10;
+        }
+
+        .story_img-shadow {
+            position: absolute;
+            top: 50%;
+            left: 45%;
+            border-radius: 50%;
+            box-shadow: 0 0 150px 60px #F4F4F5;
+            z-index: 0;
+        }
+    }
+
+    .contact_gradient-border {
+        background: linear-gradient(90deg, #1e1e1f 0%, #2a2a2b 50%, #353535 100%);
+        border-radius: 30px;
+        height: 100%;
+
+        .contact_textarea-box {
+            background: linear-gradient(to right, #0c0c0d, #09090A, #111112);
+            border-radius: 30px;
+            height: 100%;
+        }
+    }
+
+    .contact_clear-button, .contact_submit-button {
+        padding: 12px 24px;
+        border-radius: 30px;
+    }
+
+    .contact_clear-button {
+        border: 1px solid #474747;
+        margin-right: 22px;
+    }
+
+    .contact_submit-button {
+        background-image: linear-gradient(to bottom right, #FB2558, #A900FF);
+    }
+
+    .divider {
+        height: 1px;
+        width: 100%;
+        max-width: 1200px;
+        background-color: #393939;
+        margin-top: 100px;
+        margin-bottom: 100px;
+    }
+
+    .textBox {
+        border: 1px solid #505050;
+        background-color: #09090A;
+        position: relative;
+        width: 50%;
+        max-width: 450px;
+        min-height: 400px;
+        border-radius: 25px;
+        padding: 15px;
+
+        .textBox_image {
+            width: 65px;
+            height: 65px;
+            border-radius: 50%;
+            margin-right: 15px;
+        }
+
+        .textBox_star {
+            position: absolute;
+            bottom: 10px;
+            right: 0;
         }
     }
 }
 
-.story_img {
-    position: relative;
+.slick-slider {
+    display: flex;
+    align-items: center;
 
-    img {
-        position: relative;
-        z-index: 10;
-    }
+    .slick-track {
+        display: flex;
+        align-items: center;
+        min-height: 200px;
 
-    .story_img-shadow {
-        position: absolute;
-        top: 50%;
-        left: 45%;
-        border-radius: 50%;
-        box-shadow: 0 0 150px 60px #F4F4F5;
-        z-index: 0;
-    }
-}
-
-.contact_gradient-border {
-    background: linear-gradient(90deg, #1e1e1f 0%, #2a2a2b 50%, #353535 100%);
-    border-radius: 30px;
-    height: 100%;
-
-    .contact_textarea-box {
-        background: linear-gradient(to right, #0c0c0d, #09090A, #111112);
-        border-radius: 30px;
-        height: 100%;
-    }
-}
-
-.contact_clear-button, .contact_submit-button {
-    padding: 12px 24px;
-    border-radius: 30px;
-}
-
-.contact_clear-button {
-    border: 1px solid #474747;
-    margin-right: 22px;
-}
-
-.divider {
-    height: 1px;
-    width: 100%;
-    max-width: 1200px;
-    background-color: #393939;
-    margin-top: 100px;
-    margin-bottom: 100px;
-}
-
-.textBox {
-    border: 1px solid #505050;
-    background-color: #09090A;
-    position: relative;
-    width: 50%;
-    max-width: 450px;
-    min-height: 400px;
-    border-radius: 25px;
-    padding: 15px;
-
-    .textBox_image {
-        width: 65px;
-        height: 65px;
-        border-radius: 50%;
-        margin-right: 15px;
-    }
-
-    .textBox_star {
-        position: absolute;
-        bottom: 10px;
-        right: 0;
+        .slick-center i {
+            font-size: 150px !important; /* Larger size for the center item */
+            color: #FB2558 !important; /* Highlighted color for the center item */
+            transition: all 0.3s ease;
+        }
     }
 }
 
